# climate-citations

./: .gitignore  README.md  openalex_citation_network.py  prompts  pyproject.toml
climate-citations/: README.md
climate-citations/climate_citations/: __init__.py  openalex.py
climate-citations/tests/: test_openalex.py
climate_citations/: __init__.py  network_file_talker.py  openalex.py  openalex_topic_client.py  topic_citation_network.py
tests/: sample_topic.json  sample_topics_list.json  sample_work.json  sample_works_list.json  test_network_file_talker.py  test_openalex.py  test_openalex_network.py
