[tool.poetry]
name = "climate-citations"
version = "0.1.0"
description = "A lightweight OpenAlex client focused on Topics and Works."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"